--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^20.0.0",
     "@capacitor/android": "^8.0.1",
     "@capacitor/app": "7.1.0",
+    "@capacitor/camera": "^8.0.1",
     "@capacitor/core": "^8.0.1",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
